Increase dropdown z-index to avoid concealment
e.g. from README.md headline on repo view

--- a/app/styles/contentscript.css
+++ b/app/styles/contentscript.css
@@ -23,7 +23,7 @@
   text-align: left;
   border-left: 4px solid #28ADCA;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  z-index: 99;
 }
 
 .dropdown-content > p {
